# CL-kmeans

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile_old  README.md  SystemConfig.h.in  Version.h.in  abstract_kmeans.hpp  bench.cpp  benchmark_configuration.hpp  binary_format.cpp  binary_format.hpp  buffer_cache.hpp  buffer_helper.cpp  buffer_helper.hpp  centroid_update_configuration.hpp  centroid_update_factory.hpp  cl_common.cpp  cl_common.hpp  cl_initializer.cpp  cl_initializer.hpp  cl_kernel.cpp  cl_kernel.hpp  cl_sanitize.hpp  cl_string.cpp  cl_string.hpp  cluster_generator.cpp  cluster_generator.hpp  clustering_benchmark.cpp  clustering_benchmark.hpp  common.hpp  configuration_parser.cpp  configuration_parser.hpp  csv.hpp  device_scheduler.hpp  fused_configuration.hpp  fused_factory.hpp  generator.cpp  helpers.hpp  (+53 more)
allocator/: readonly_allocator.hpp
baselines/: CMakeLists.txt  kmeans_armadillo.cpp  kmeans_mlpack.cpp  kmeans_r.cpp  r_stats_kmeans.c  r_stats_kmeans.h
cl_kernels/: aggregate_sum_api.hpp  aggregate_sum_mass.cl  centroid_update_cluster_merge.hpp  centroid_update_feature_sum.hpp  centroid_update_feature_sum_pardim.hpp  fused_cluster_merge.hpp  fused_feature_sum.hpp  histogram_global.cl  histogram_global_api.hpp  histogram_part_global.cl  histogram_part_global_api.hpp  histogram_part_local.cl  histogram_part_local_api.hpp  histogram_part_private.cl  histogram_part_private_api.hpp  kernel_path.hpp  kmeans.cl  labeling_unroll_vector.hpp  lloyd_cluster_merge.cl  lloyd_feature_sum.cl  lloyd_feature_sum_api.hpp  lloyd_feature_sum_pardim.cl  lloyd_feature_sum_pardim_api.hpp  lloyd_fused_cluster_merge.cl  lloyd_fused_feature_sum.cl  lloyd_labeling.cl  lloyd_labeling_api.hpp  lloyd_labeling_vectorize_points.cl  lloyd_labeling_vectorize_points_api.hpp  lloyd_labeling_vp_clc.cl  lloyd_labeling_vp_clc_api.hpp  lloyd_labeling_vp_clcp.cl  lloyd_labeling_vp_clcp_api.hpp  lloyd_merge_sum.cl  lloyd_merge_sum_api.hpp  loop_join.cl  mass_sum_global_atomic.cl  mass_sum_global_atomic_api.hpp  mass_sum_merge.cl  mass_sum_merge_api.hpp  (+10 more)
clustering/: .gitignore  kmeans_initializer.hpp  lloyd_gpu_feature_sum.hpp
clustering/cl_kernels/: lloyd_feature_sum.cl  lloyd_labeling.cl  lloyd_labeling_api.hpp  lloyd_labeling_vp_clc.cl  lloyd_labeling_vp_clcp_api.hpp
clustering/scripts/: lloyd_merge_sum_indices.jl
cmake/: FindMLPack.cmake  FindOpenCL.cmake
configurations/: intel_core_i7-6700K_single_stage.conf  intel_core_i7-6700K_single_stage_buffered.conf  intel_core_i7-6700K_three_stage.conf  intel_core_i7-6700K_three_stage_buffered.conf  nvidia_gtx_1080_single_stage.conf  nvidia_gtx_1080_single_stage_buffered.conf  nvidia_gtx_1080_three_stage.conf  nvidia_gtx_1080_three_stage_buffered.conf
container/: vector_map_hack.hpp
images/: Keira_Knightley_2015.txt
libs/: CMakeLists.txt
libs/jpeg_reader_writer/: CHANGES.txt  Doxyfile  JPEGReader.cpp  JPEGReader.h  JPEGWriter.h  README.txt  test_jpeg_reader.cpp  test_jpeg_writer.cpp
libs/jpeg_reader_writer/html/: JPEGReader_8h-source.html  JPEGWriter_8h-source.html  JPEG_8h-source.html  annotated.html  classJPEGReader-members.html  classJPEGReader.html  classJPEGWriter-members.html  classJPEGWriter.html  files.html  functions.html  functions_func.html  index.html  namespaceJPEG.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html
libs/jpeg_reader_writer/test_jpeg.xcodeproj/: project.pbxproj
measurement/: mapping_definition.hpp  measurement.cpp  measurement.hpp  type_definition.hpp  units.hpp
scripts/: color_coded_config.sh  file_info.py  filter_error_codes.sh  generate_bulk.py  generate_features.py  lloyd_fused_feature_sum_indices.jl  lloyd_merge_sum_indices.jl  nvprof.sh  nvvp.cfg  nvvp_filter.sh  reduce_vector_parcol.jl
test/: CMakeLists.txt  Test.cpp  buffer_cache.cpp  data_generator.hpp  device_scheduler.cpp  feature_sum.cpp  histogram.cpp  opencl_setup.hpp  reduce_vector.cpp
