FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF(OPENMP_FOUND)

# SET(BLA_VENDOR Intel10_64lp)
# SET(BLA_VENDOR OpenBLAS)
# SET(BLA_VENDOR ATLAS)
# SET(BLA_VENDOR Goto)
FIND_PACKAGE(BLAS)
IF(BLAS_FOUND)
    MESSAGE(STATUS BLAS found: ${BLAS_LIBRARIES})
ENDIF(BLAS_FOUND)

FIND_PACKAGE(Armadillo 6.500)
IF(ARMADILLO_FOUND AND BLAS_FOUND)
    SET(ARMAKMEANS_SOURCES
        kmeans_armadillo.cpp
        ../binary_format.cpp
        )
    INCLUDE_DIRECTORIES(${ARMADILLO_INCLUDE_DIRS})
    ADD_EXECUTABLE(kmeans_armadillo ${ARMAKMEANS_SOURCES})
    TARGET_LINK_LIBRARIES(kmeans_armadillo ${ARMADILLO_LIBRARIES})
ENDIF(ARMADILLO_FOUND AND BLAS_FOUND)
