FIND_PACKAGE(Boost 1.50 REQUIRED COMPONENTS system filesystem)
FIND_PACKAGE(GTest 1.6 REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

FUNCTION(add_test_module TEST_NAME TEST_SOURCE)
    GET_FILENAME_COMPONENT(TEST_TARGET ${TEST_SOURCE} NAME_WE)
    ADD_EXECUTABLE(${TEST_TARGET} ${TEST_SOURCE} ../measurement/measurement.cpp ../cluster_generator.cpp)
    TARGET_LINK_LIBRARIES(${TEST_TARGET}
        ${Boost_LIBRARIES}
        ${GTEST_LIBRARIES}
        ${OPENCL_LIBRARIES}
        ${CLEXT_LIBRARIES}
        )
ENDFUNCTION()

ENABLE_TESTING()
ADD_TEST_MODULE("histogram" histogram.cpp)
ADD_TEST_MODULE("reduce_vector" reduce_vector.cpp)
ADD_TEST_MODULE("feature_sum" feature_sum.cpp)
